syntax = "proto3";

import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.grpc.user";

message UserSearchRequest {
  string login_id = 1;
}

message UserSearchResponse{
  string login_id = 1;
  string name = 2;
  common.Genre genre = 3;
}

message UserGenreUpdateRequest{
  string login_id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc SearchUserGenre(UserSearchRequest) returns (UserSearchResponse);
  rpc UpdateUserGenre(UserGenreUpdateRequest) returns (UserSearchResponse);
}


